--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bulma": "^0.5.1",
     "pouchdb": "^6.0.7",
     "pouchdb-server": "^2.3.7",
-    "requirejs": "^2.3.4"
+    "requirejs": "^2.3.4",
+    "vue": "^2.4.2"
   }
 }
