--- a/package.json
+++ b/package.json
@@ -11,23 +11,16 @@
   },
   "devDependencies": {
     "appcache-manifest": "^2.1.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-dynamic-import-webpack": "^1.0.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-standalone": "^6.26.0",
     "copy-webpack-plugin": "^4.0.1",
     "npm-run-all": "^4.0.2",
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0",
+    "requirejs": "^2.3.5",
     "bulma": "^0.5.1",
-    "http-server": "^0.10.0",
     "pouchdb": "^6.0.7",
     "pouchdb-server": "^2.3.7",
+    "http-server": "^0.10.0",
     "vue": "^2.4.2"
   }
 }
