--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "appcache-manifest": "^2.1.0",
     "copy-webpack-plugin": "^4.0.1",
     "npm-run-all": "^4.0.2",
+    "tape": "^4.8.0",
     "webpack": "^3.5.5"
   },
   "dependencies": {
